@@ -24,15 +24,19 @@ if (!$OUTPUT->ajax_call) {
     return;
 }
 
-// move messages
+// copy messages
 if (!empty($_POST['_uid']) && strlen($_POST['_target_mbox'])) {
-    $target = rcube_utils::get_input_value('_target_mbox', rcube_utils::INPUT_POST, true);
+    $target  = rcube_utils::get_input_value('_target_mbox', rcube_utils::INPUT_POST, true);
+    $sources = array();
 
-    foreach (rcmail::get_uids() as $mbox => $uids) {
-        if ($mbox === $target)
+    foreach (rcmail::get_uids(null, null, $multifolder) as $mbox => $uids) {
+        if ($mbox === $target) {
             $copied++;
-        else
+        }
+        else {
             $copied += (int)$RCMAIL->storage->copy_message($uids, $target, $mbox);
+            $sources[] = $mbox;
+        }
     }
 
     if (!$copied) {
@@ -47,7 +51,7 @@ if (!empty($_POST['_uid']) && strlen($_POST['_target_mbox'])) {
 
     rcmail_send_unread_count($target, true);
 
-    $OUTPUT->command('set_quota', $RCMAIL->quota_content());
+    $OUTPUT->command('set_quota', $RCMAIL->quota_content(null, $multifolder ? $sources[0] : 'INBOX'));
 }
 // unknown action or missing query param
 else {
